--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Orbitron:wght@600&display=swap');
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
 
 body {
   background-color: #000;
@@ -46,7 +52,7 @@ body {
 /* SECCIONES */
 section {
   padding: 4rem 2rem;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: auto;
   animation: fadeIn 1.2s ease;
 }
@@ -192,6 +198,9 @@ p {
   color: #fff;
   padding: 4rem 2rem;
   text-align: center;
+
+  max-width: 1200px; /* ✅ para evitar que se expanda de más */
+  margin: 0 auto;     /* ✅ para centrar en la pantalla */
 }
 
 .sobre-bulletpr h2 {
@@ -201,7 +210,7 @@ p {
 }
 
 .sobre-bulletpr p {
-  max-width: 700px;
+  max-width: 1200px;
   margin: 0 auto 3rem;
   line-height: 1.6;
   font-size: 1.1rem;
